# Tadataka

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  camera.py  errors.py  fit_affine.py  keypoints.py  matrix.py  optimizers.py  pyproject.toml  requirements.txt  robust.py  run_ba.py  run_photo_vo.py  run_vitamin_e.py  run_vo.py  run_vo_ball.py  run_vo_dummy.py  run_vo_tum.py  setup.py  triangulation.py  updater.py  utils.py
bundle_adjustment/: bundle_adjustment.py  initializers.py  mask.py  triangulation.py
dataset/: bundle_adjustment.py  points.py
examples/: animation.py  animation_feature_based.py  dense_triangulation.py  dvo_pose_change.py  estimate_depth_from_stereo.py  estimate_depth_known_pose.py  plot.py  run_vo.py  semi_dense.py  semi_dense_depth.py  semi_dense_vo.py  vitamin_e.py  vitamin_e_vo.py
flow_estimation/: extrema_tracker.py  image_curvature.py  keypoints.py
nikkei/: explanation.py  vo.py
optimization/: array_utils.py  errors.py  initializers.py  optimizers.py  residuals.py  robustifiers.py  transformer.py  updaters.py
projection/: projections.py
rigid/: rotation.py  transformation.py
scripts/: explanation.py  vo.py
src/: camera.rs  cmp.rs  convolution.rs  gradient.rs  homogeneous.rs  homogeneous_py.rs  image_range.rs  interpolation.rs  interpolation_py.rs  interpolation_pymodule.rs  lib.rs  numeric.rs  projection.rs  projection_py.rs  projection_pymodule.rs  transform.rs  transform_py.rs  transform_pymodule.rs  triangulation.rs  vector.rs  warp.rs  warp_py.rs  warp_pymodule.rs
tadataka/: _homogeneous.cpp  _homogeneous.hpp  _matrix.cpp  _matrix.hpp  _projection.cpp  _projection.hpp  _transform.cpp  _transform.hpp  _triangulation.cpp  _triangulation.py  _types.hpp  _warp.cpp  assertion.py  camera.py  camera_distortion.py  codegen.py  coordinates.py  cost.py  decorator.py  depth.py  feature.py  feature_matching.py  features.py  gradient.py  irls.py  (+26 more)
(+340 files in other folders)
