[package]
name = "rust_bindings"
version = "0.1.0"
authors = ["IshitaTakeshi <ishitah.takeshi@gmail.com>"]
edition = "2018"

[lib]
name = "rust_bindings"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = "0.8.0"
ndarray = ">=0.13"
ndarray-linalg = ">=0.12.0"
blas = "0.20"
openblas-src = "0.9"

[dependencies.pyo3]
version = "0.9.0"
features = ["extension-module"]
